infrastructures/OCI/k8s/traefik/traefik-dashboard-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.oci.santocaruso.eu`)
      kind: Rule
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: google-auth
          namespace: traefik
  tls:
    certResolver: letsencrypt
